modifying Home Page and Contact Information

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <img src="dave.png" alt="Dave's Profile Picture">
       </td>
       <td>
-        <H>Dave LeBlanc Personal Website</H>
-        <P><em> I am <strong>Senior Engineering manager</strong> looking to build my own website! </em></P>
+        <H>Dave Personal Website</H>
+        <P><em> I am <strong>Senior Engineering manager</strong> doing some HTML work! </em></P>
         <p>I am a good continuing my education to be able to do more work on front end development and create websites!</p>
       </td>
     </tr>
@@ -23,8 +23,8 @@
   <hr noshade />
   <h3>Education</h3>
   <ul>
-    <li><em><strong>Burnt Hills High School</strong></em> - Advanced Regents Degree</li>
-    <li><em><strong>Hudson Valley Community College</strong></em> - Associates in Business Administration</li>
+    <li><em><strong>High School</strong></em> - Regents Degree</li>
+    <li><em><strong>College</strong></em> - Associates</li>
   </ul>
   <h3>Work Experience</h3>
   <table>
@@ -37,19 +37,19 @@
     </thead>
     <tbody>
       <tr>
-        <td>2007-2013</td>
-        <td>Autotask Corporation (Now Datto) </td>
-        <td>Quality Assurance Lead</td>
+        <td>2022</td>
+        <td>AT </td>
+        <td>QA</td>
       </tr>
       <tr>
-        <td>2013-2017</td>
-        <td>Apprenda</td>
-        <td>Software Engineer in Test</td>
+        <td>2021</td>
+        <td>Apps</td>
+        <td>SEIT</td>
       </tr>
       <tr>
-        <td>2017-Present</td>
-        <td>Commercehub</td>
-        <td>Senior Engineering Manager</td>
+        <td>2023</td>
+        <td>eCommerce</td>
+        <td>Manage</td>
       </tr>
     </tbody>
     <tfoot>
