--- a/contact info.html
+++ b/contact info.html
@@ -14,7 +14,7 @@
     <li>Address - 123 Web Dev Ave</li>
   </ul>
   <hr>
-  <form action="mailto:nikeguy430@gmail.com" method="post" enctype="text/plain">
+  <form action="mailto:test@gmail.com" method="post" enctype="text/plain">
     <label>Your Name:</label>
     <input type="text" name="yourname" value="">
     <br>
