--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table cellspacing= "20">
     <tr>
       <td>
-        <img src="dave.png" alt="Dave's Profile Picture">
+        <img src="images/dave.PNG" alt="Dave's Profile Picture">
       </td>
       <td>
         <H>Dave Personal Website</H>
