Adding CSS folder and new formatting changes

--- a/contact info.html
+++ b/contact info.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Information</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -26,10 +27,11 @@
     <br>
     <input type="submit" name="" value="Submit">
   </form>
+  <hr>
 </body>
-<foo>
+<footer>
   <h3><a href="index.html">Home Page</a></h3>
   <h3><a href="hobbies.html">My Hobbies</a></h3>
-</foo>
+</footer>
 
 </html>
