--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Hobbies</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -20,9 +21,10 @@
   <center>
     <img src="https://media.istockphoto.com/photos/mountain-landscape-picture-id517188688?k=20&m=517188688&s=612x612&w=0&h=i38qBm2P-6V4vZVEaMy_TaTEaoCMkYhvLCysE7yJQ5Q=" alt="Sunset in the Mountains">
   </center>
+  <hr>
+</body>
+<footer>
   <h3><a href="index.html">Home Page</a></h3>
   <h3><a href="contact info.html">Contact Information</a></h3>
-
-</body>
-
+</footer>
 </html>
