--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
   <meta charset="utf-8">
   <title> Dave's Personal Site</title>
   <meta name="description" content="This will give you the ability to do a calculation on BAC." />
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
+  <h1>Dave's Personal Site</h1>
   <table cellspacing= "20">
     <tr>
       <td>
         <img src="images/dave.PNG" alt="Dave's Profile Picture">
       </td>
       <td>
-        <H>Dave Personal Website</H>
         <P><em> I am <strong>Senior Engineering manager</strong> doing some HTML work! </em></P>
         <p>I am a good continuing my education to be able to do more work on front end development and create websites!</p>
       </td>
     </tr>
   </table>
-  <hr noshade />
+  <hr/>
   <h3>Education</h3>
   <ul>
     <li><em><strong>High School</strong></em> - Regents Degree</li>
     <li><em><strong>College</strong></em> - Associates</li>
   </ul>
+  <hr>
   <h3>Work Experience</h3>
   <table>
     <thead>
@@ -55,6 +56,7 @@
     <tfoot>
     </tfoot>
   </table>
+  <hr>
   <h3>Skills</h3>
   <table border="5" cellspacing= "10">
     <td>
@@ -93,6 +95,7 @@
       </table>
     </td>
   </table>
+  <hr>
 </body>
 <foo>
   <h3><a href="hobbies.html">Hobbies</a></h3>
